--- a/StarWarsRestApp/src/app/app.component.html
+++ b/StarWarsRestApp/src/app/app.component.html
@@ -30,7 +30,7 @@
       <mat-icon>public</mat-icon>
       <span>Planets</span>
     </button>
-    <button mat-button class="menu-button" routerLink="">
+    <button mat-button class="menu-button" routerLink="/films">
       <mat-icon>local_movies</mat-icon>
       <span>Movies</span>
     </button>
