--- a/StarWarsRestApp/src/app/components/people/people.component.html
+++ b/StarWarsRestApp/src/app/components/people/people.component.html
@@ -1,29 +1,16 @@
-<div class="card" autosize>
+<div class="card margin" autosize>
 <h3>Star Wars People</h3>
-    <div class="card-header">
-        <!-- <a class="btn btn-success" routerLink="createinvoice">Get Stuff</a> -->
-    </div>
-    <div class="card-body">
-
-        <div class="mat-elevation-z8">
-
-            <mat-form-field>
-              <mat-label>Filter</mat-label>
-              <input matInput placeholder="Filter" (keyup)="Filterchange($event)">
-            </mat-form-field>
-        
-          <table mat-table matSort [dataSource]="dataSource" >
-        
-            <ng-container matColumnDef="first_name">
-                <th mat-header-cell mat-sort-header *matHeaderCellDef> Name </th>
-                <td mat-cell *matCellDef="let element"> {{element.name|split:false}} </td>
+<div class="card-header">
+</div>
+<div class="card-body">
+    <div class="mat-elevation-z8">
+        <table matTableFilter mat-table matSort [dataSource]="dataSource" >
+    
+            <ng-container matColumnDef="name">
+                <th mat-header-cell mat-sort-header *matHeaderCellDef> First Name </th>
+                <td mat-cell *matCellDef="let element"> {{element.name}} </td>
             </ng-container>
         
-            <ng-container matColumnDef="last_name">
-                <th mat-header-cell mat-sort-header *matHeaderCellDef> Name </th>
-                <td mat-cell *matCellDef="let element"> {{element.name|split:true}} </td>
-            </ng-container>
-            
             <ng-container matColumnDef="height">
                 <th mat-sort-header mat-header-cell *matHeaderCellDef> Height </th>
                 <td mat-cell *matCellDef="let element"> {{element.height}} </td>
@@ -35,7 +22,7 @@
             </ng-container>
             
             <ng-container matColumnDef="hair_color">
-                <th mat-header-cell *matHeaderCellDef> Hair Color </th>
+                <th mat-sort-header mat-header-cell *matHeaderCellDef> Hair Color </th>
                 <td mat-cell *matCellDef="let element"> {{element.hair_color}} </td>
             </ng-container>
             
@@ -55,7 +42,7 @@
             </ng-container>
             
             <ng-container matColumnDef="gender">
-                <th mat-header-cell *matHeaderCellDef> Gender </th>
+                <th mat-sort-header mat-header-cell *matHeaderCellDef> Gender </th>
                 <td mat-cell *matCellDef="let element"> {{element.gender}} </td>
             </ng-container>
             
@@ -75,7 +62,7 @@
             </ng-container>
             
             <ng-container matColumnDef="vehicles">
-                <th mat-header-cell *matHeaderCellDef> phone </th>
+                <th mat-sort-header mat-header-cell *matHeaderCellDef> phone </th>
                 <td mat-cell *matCellDef="let element"> {{element.vehicles}} </td>
             </ng-container>
             
@@ -95,20 +82,13 @@
             </ng-container>
             
             <ng-container matColumnDef="url">
-                <th mat-header-cell *matHeaderCellDef> phone </th>
+                <th mat-sort-header mat-header-cell *matHeaderCellDef> phone </th>
                 <td mat-cell *matCellDef="let element"> {{element.url}} </td>
             </ng-container>
             
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-          </table>
-        
-          <mat-paginator [pageSizeOptions]="[10]" showFirstLastButtons>
-        
-          </mat-paginator>
-          
-        </div>
-
-        
+        </table>
+    </div>
 </div>
 
